# mavepolish

./: .gitignore  README.md  app.py  pretrained_model.pkl  pyproject.toml  render.yaml  requirements.txt
examples/: ADSL_high.VEM.tsv  ADSL_low.VEM.tsv  INSR.tsv  PRKN_pSer65Ub.VEM.tsv  Parkin_Vahid.csv  manifest.json
mavepolish/: __init__.py  cli.py  core.py  to_vem.py  webapp.py
