[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mavepolish"
version = "0.1.0"
description = "Quality Control & Reconstruction for MAVE Data"
requires-python = ">=3.9"
dependencies = [
    "dash>=2.18.2",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
]

[project.scripts]
mavepolish = "mavepolish.cli:main"
to_vem = "mavepolish.to_vem:main"
mavepolish-web = "mavepolish.webapp:main"

[tool.setuptools.packages.find]
include = ["mavepolish*"]
